--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+	padding-top: 100px;
+}
+
+img-text{
+	position: absolute;
+    top: 30%;
+    left: 10%;
+}
+
+a.linkbutton:link{
+	background-color:red;
+	color: white;
+	text-decoration: none;
+	padding: 14px 25px;
+    text-align: center;
+}
+
+a.linkbutton:visited{
+	background-color:red;
+	color: white;
+	text-decoration: none;
+	padding: 14px 25px;
+    text-align: center;
+}
+
+a.linkbutton:hover{
+	background-color:red;
+	color: white;
+	text-decoration: underline;
+	padding: 14px 25px;
+    text-align: center;
+}
+
+a.linkbutton:active{
+	background-color:red;
+	color: white;
+	text-decoration: underline;
+	padding: 14px 25px;
+    text-align: center;
+}
+
+
+.nav-link{
+	color: black;
+}
+
+.nav-link:hover{
+	color: black;
+	text-decoration: underline;
+	text-decoration-color: red;
+	text-underline-position: under;
+}
